--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@simplewebauthn/browser": "^13.1.0",
     "@tanstack/react-query": "^5.56.2",
+    "@vitejs/plugin-react": "^4.6.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -66,6 +67,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
+    "vite-ssg": "^28.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
