--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@simplewebauthn/browser": "^13.1.0",
     "@tanstack/react-query": "^5.56.2",
     "@vitejs/plugin-react": "^4.6.0",
+    "@wroud/vite-plugin-ssg": "^5.3.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
