--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "build:ssg": "node scripts/generate-static.js",
-    "preview": "vite preview",
-    "preview:ssg": "vite preview --mode production",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
