Add default prompts to landing page JSON files for guidance

--- a/public/content/landing-pages/en/business-tools/workflow-automation-and-project-management.json
+++ b/public/content/landing-pages/en/business-tools/workflow-automation-and-project-management.json
@@ -2,6 +2,7 @@
   "title": "Workflow Automation and Project Management Tools",
   "description": "Build powerful workflow automation and project management applications with Kliv's AI-powered platform",
   "metaDescription": "Create custom workflow automation and project management tools with Kliv. Build apps that streamline processes, manage tasks, and boost team productivity.",
+  "defaultPrompt": "I want to build a project management app with task tracking, team collaboration, automated workflows, and progress reporting dashboards.",
   "hero": {
     "title": "Build Workflow Automation & Project Management Apps",
     "subtitle": "Create powerful applications that automate workflows, manage projects, and boost team productivity with Kliv's AI-powered platform.",
