--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "build:sitemap": "npm run generate-sitemap && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
